--- a/3° Bimestre/prjBuffet/index.html
+++ b/3° Bimestre/prjBuffet/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> buffet </title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
 
 
 </head>
@@ -17,20 +20,26 @@
     <section class="banner">
 
 
-        <section class="s1">
-            <h1> Tornando seus <br> sonhos deliciosa <br> realidade </h1>
-        </section>
+        <div class="s1">
+            <h1 class="tituloBanner"> Tornando seus <br> sonhos deliciosa <br> realidade </h1>
 
-        <section class="s2">
-            <img src="img/img banner 2.jpg" class="img2"/>
-            <img src="img/img banner 3.jpg" class="img3"/>
-            <br>
-            <img src="img/img banner 1.5.jpg" class="img1"/>
+            <div class="descBanner">
+                <p> Chefes profissionais </p>
+                <p> +600 Opções de Pratos </p>
+                <p> Orçamento acessível </p>
+                <p> Espaços Amplos </p>
+                <p> Organização excepcional </p>
+            </div>
+        </div>
+
+        <div class="s2">
+            <img src="img/img banner 2.jpg" class="img1"/>
+            <img src="img/img banner 3.jpg" class="img2"/>
+            <img src="img/img banner 1.5.jpg" class="img3"/>
             <img src="img/img banner 4.jpg" class="img4"/>
-            <br>
             <img src="img/img banner 5.jpg" class="img5"/>
             <img src="img/img banner 6.jpg" class="img6"/>
-        </section>
+        </div>
 
     </section>
 
