--- a/3° Bimestre/prjBuffet/locais.html
+++ b/3° Bimestre/prjBuffet/locais.html
@@ -46,6 +46,23 @@
 
             </div>
 
+        </div>
+
+        <div class="divPalace">
+            <div class="imgsPalace">
+                <img src="img/img palace 1.jpg" class="imgP1"/>
+                <img src="img/img palace 2.jpg" class="imgP2"/>
+                <img src="img/img palace 3.jpg" class="imgP3"/>
+                <img src="img/img palace 4.jpg" class="imgP4"/>
+
+            </div>
+
+            <div class="descPalace">
+                <h1 class="tituloPalace"> CONHEÇA OS <br> PALACES </h1>
+    
+                <p class="contPalace"> desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc </p>
+    
+            </div>
 
 
         </div>
