--- a/3° Bimestre/prjBuffet/cardapio.html
+++ b/3° Bimestre/prjBuffet/cardapio.html
@@ -30,7 +30,7 @@
             <div class="desc1">
                 <h1 class="tituloInfo"> BRUNCH </h1>
 
-                <p class="descInfo"> Coquetel Básico oferece opções saborosas que agradam a todos, garantindo praticidade e satisfação em qualquer evento. </p>
+                <p class="descInfo"> Ofereça uma experiência deliciosa e sofisticada com nosso serviço de brunch, perfeito para eventos matutinos ou vespertinos, com uma refeição completa e equilibrada, criando uma atmosfera descontraída e sofisticada ao mesmo tempo. </p>
 
             </div>
 
