--- a/3° Bimestre/prjBuffet/index.html
+++ b/3° Bimestre/prjBuffet/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style2.css"> 
+    <link rel="stylesheet" href="/css/styles.css"> 
     <link rel="stylesheet" href="/css/fontes.css">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="shortcut icon" href="./img/Icon Buffet.ico" type="image/x-icon">
