--- a/3° Bimestre/prjBuffet/cardapio.html
+++ b/3° Bimestre/prjBuffet/cardapio.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Coquetel Básico </title>
     <link rel="stylesheet" href="./css/card.css">
+    <link rel="stylesheet" href="/fontes/fontes.css">
+
 
 </head>
 <body>
+
+    <header class="cabecalho">
+        <div class="logo">
+            <a href="index.html"> <img src="./img/Logo Buffet.jpg" alt="Logo do Buffet"> </a>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="cardápio.html">Cardápio</a>
+                </li>
+                <li>
+                    <a href="#orçamento">Orçamento</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     
     <section>
         <h1 class="titulo"> COQUETEL BÁSICO </h1>
@@ -107,11 +132,7 @@
         <div class="space"> </div>
 
 
-
-
     </section>
-
-
 
 
 
