--- a/3° Bimestre/prjBuffet/index.html
+++ b/3° Bimestre/prjBuffet/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="cabecalho">
         <div class="logo">
-            <a href="index.html"><img src="./img/Logo Buffet.jpg" alt="Logo do Buffet"></a>
+            <a href="index.html"> <img src="./img/Logo Buffet.jpg" alt="Logo do Buffet"> </a>
         </div>
         <nav>
             <ul class="menu">
@@ -120,16 +120,18 @@
 
     <section class="cardápio">
         <div class="descCardápio">
-            <h1> Cardápio </h1>
+            <h1> CARDÁPIO </h1>
             <p> Para garantir a satisfação de todos os seus convidados, nosso <br> Buffet conta com uma equipe gastronômica que conquista até os paladares <br> mais exigentes com uma variedade de pratos e aperitivos. </p>
             <img src="./img/Linha Rosa.png" alt="Divisória Rosa" class="linha">
-            <h2> Nossos mais Famosos: <br> Coquetéis </h2>
+            <h2> Nossos mais Famosos: <br> COQUETÉIS </h2>
         </div>
+
         <div class="imagensCardápio">
-            <img src="./img/Cardápio 1.jpg" alt="Imagem do Cardápio" class="imagem1">
+            <a href="cardapio.html"> <img src="./img/Cardápio 1.jpg" alt="Imagem do Cardápio" class="imagem1"> </a>
             <img src="./img/Cardápio 2.jpg" alt="Imagem do Cardápio" class="imagem2">
             <img src="./img/Cardápio 3.jpg" alt="Imagem do Cardápio" class="imagem3">
         </div>
+
         <div class="descimagensCardápio">
             <h3 class="coquetel1">Coquetel<br>Básico</h3>
             <h3 class="coquetel2">Coquetel<br>Premium</h3>
@@ -139,6 +141,7 @@
             <p class="preço2">R$ 60,00 por convidado</p>
             <p class="preço3">R$ 80,00 por convidado</p>
         </div>
+
         <div class="botõesimagensCardápio">
                 <a href="./cardápio.html" class="botãoCardápio1"> Explore Mais! </a>
                 <a href="./cardápio.html" class="botãoCardápio2"> Explore Mais! </a>
