--- a/3° Bimestre/prjBuffet/index.html
+++ b/3° Bimestre/prjBuffet/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css"> 
-    <link rel="stylesheet" href="/css/fontes.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/fontes/fontes.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="shortcut icon" href="./img/Icon Buffet.ico" type="image/x-icon">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title> Alder's Buffet </title>
 </head>
@@ -22,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="cardápio.html">Cardápio</a>
+                    <a href="cardapio.html">Cardápio</a>
                 </li>
                 <li>
                     <a href="#orçamento">Orçamento</a>
@@ -36,7 +38,7 @@
 
     <section class="banner">
         <div class="textosBanner">
-            <h1 class="tituloBanner"> Tornando seus <br> sonhos em uma <br> deliciosa <br> realidade </h1>
+            <h1 class="tituloBanner"> Tornando seus <br> sonhos em <br> uma deliciosa <br> realidade </h1>
             <div class="descBanner">
                 <p> Chefes profissionais </p>
                 <p> +600 Opções de Pratos </p>
@@ -149,6 +151,43 @@
         </div>
     </section>
 
+
+    <section class="carrossel">
+
+        <div>
+            <h1 class="tituloCarro"> UM POUCO DO NOSSO TRABALHO! </h1>
+        </div>
+
+        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/fotinhas - carrossel 1.png" class="d-blockw-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/fotinhas - carrossel 2.png" class="d-blockw-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/fotinhas - carrossel 3.png" class="d-blockw-100" alt="...">
+              </div>
+              <div class="carousel-item active">
+                <img src="./img/fotinhas - carrossel 4.png" class="d-blockw-100" alt="...">
+              </div>
+              <div class="carousel-item active">
+                <img src="./img/fotinhas - carrossel 5.png" class="d-blockw-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+    </section>
+
     <footer class="rodapé">
         <div class="textosRodapé">
             <p class="comunicação"> Converse Conosco Pelas Nossas Redes Sociais! </p>
@@ -164,5 +203,8 @@
         </div>
 
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
