--- a/3° Bimestre/prjBuffet/cardapio.html
+++ b/3° Bimestre/prjBuffet/cardapio.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Coquetel Básico </title>
-    <link rel="stylesheet" href="./css/card.css">
+    <link rel="stylesheet" href="./css/stylesCard.css">
     <link rel="stylesheet" href="/fontes/fontes.css">
+    <link rel="stylesheet" href="./css/reset.css">
 
 
 </head>
@@ -21,7 +22,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="cardápio.html">Cardápio</a>
+                    <a href="cardapio.html">Cardápio</a>
                 </li>
                 <li>
                     <a href="#orçamento">Orçamento</a>
@@ -131,10 +132,23 @@
 
         <div class="space"> </div>
 
-
     </section>
 
+    <footer class="rodapé">
+        <div class="textosRodapé">
+            <p class="comunicação"> Converse Conosco Pelas Nossas Redes Sociais! </p>
+            <p class="endereço"> Nos encontre no Endereço: Avenida Uau N°70, Cep: 08696-920, Sp, São Paulo. </p>
+            <p class="direitos"> Todos os Direitos Reservados para - Alder's - 2024 </p>
+        </div>
 
+        <div class="redesSociais">
+            <img src="./img/instagram.png" alt="Logo Instagram" class="instagram">
+            <img src="./img/twitter.png" alt="Logo X" class="x">
+            <img src="./img/whatsapp.png" alt="Logo Whatsapp" class="whatsapp">
+            <img src="./img/youtube.png" alt="Logo Youtube" class="youtube">
+        </div>
+
+    </footer>
 
 </body>
 </html>
