--- a/3° Bimestre/prjBuffet/index.html
+++ b/3° Bimestre/prjBuffet/index.html
@@ -66,8 +66,8 @@
 
         <div class="botão">
             <a href="#orçamento"> Faça o seu Orçamento! </a>
-
         </div>
+
     </section>
 
     <section class="locais">
@@ -85,7 +85,7 @@
             <div class="descHouses">
                 <h1 class="tituloHouses"> CONHEÇA AS <br> BIG HOUSES </h1>
 
-                <p class="contHouses"> desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc </p>
+                <p class="contHouses"> Possuindo um espaço amplo e elegante, com iluminação suave e lustres que pendem do teto alto. As paredes são revestidas em tons neutros, adornadas com obras de arte sofisticadas. Mesas redondas cobertas com toalhas de seda oferecem uma vista deslumbrante de arranjos florais exuberantes. </p>
             </div>
         </div>
 
@@ -93,7 +93,7 @@
             <div class="descGardens">
                 <h1 class="tituloGardens"> CONHEÇA OS <br> GARDENS </h1>
 
-                <p class="contGardens"> desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc </p>
+                <p class="contGardens"> Imagine um buffet ao ar livre, situado em um exuberante jardim, cercado por árvores frondosas e flores coloridas. Mesas de madeira rústica estão dispostas no local, decoradas com toalhas de linho leve e arranjos florais naturais que capturam a essência da estação. Luzes pendentes e lanternas delicadas criam uma atmosfera mágica ao entardecer </p>
             </div>
 
             <div class="imgsGardens">
@@ -115,7 +115,7 @@
             <div class="descPalace">
                 <h1 class="tituloPalace"> CONHEÇA OS <br> PALACES </h1>
     
-                <p class="contPalace"> desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc desc </p>
+                <p class="contPalace"> Nossos Buffets Palaces são salões grandiosos, decorados em estilo barroco. O piso de mármore reluzente reflete a luz dos candelabros dourados que pendem do teto ornamentado. Mesas longas são elegantemente postas com toalhas de brocado, pratos de porcelana fina e talheres de prata. Sendo um ambiente de sofisticação e glamour, ideal para eventos verdadeiramente grandiosos. </p>
             </div>
         </div>
     </section>
@@ -145,7 +145,7 @@
         </div>
 
         <div class="botõesimagensCardápio">
-                <a href="./cardápio.html" class="botãoCardápio1"> Explore Mais! </a>
+                <a href="./cardapio.html" class="botãoCardápio1"> Explore Mais! </a>
                 <a href="./cardápio.html" class="botãoCardápio2"> Explore Mais! </a>
                 <a href="./cardápio.html" class="botãoCardápio3"> Explore Mais! </a>
         </div>
