--- a/3° Bimestre/prjBuffet/cardapio.html
+++ b/3° Bimestre/prjBuffet/cardapio.html
@@ -130,6 +130,10 @@
 
         </div>
 
+        <div class="botão">
+            <a href="#orçamento"> Solicite o seu Orçamento! </a>
+        </div>
+
         <div class="space"> </div>
 
     </section>
